blocks/b-axis/b-axis.css
.b-axis
{
    cursor: default;
    font: 70%/100% Arial,sans-serif;
    position: relative;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
}

.b-axis__value
{
    position: absolute;
}

.b-axis__label
{
    position: absolute;
}

.b-axis__tick
{
    position: absolute;
}

.b-axis_pos_left .b-axis__value
{
    left: 0;
    right: 0;
}

.b-axis_pos_right .b-axis__value
{
    left: 0;
    right: 0;
}

.b-axis_pos_top .b-axis__value
{
    bottom: 0px;
}

.b-axis_pos_bottom .b-axis__value
{
    top: 0px;
}

.b-axis_pos_left .b-axis__label
{
    bottom: -0.5em;
    left: 0;
    overflow: hidden;
    right: 7px;
    text-align: right;
}

.b-axis_pos_right .b-axis__label
{
    bottom: -0.5em;
    left: 7px;
    overflow: hidden;
    right: 0;
    text-align: left;
}

.b-axis_pos_top .b-axis__label
{
    left: -100px;
    overflow: hidden;
    text-align: center;
    bottom: 7px;
    width: 200px;
}

.b-axis_pos_bottom .b-axis__label
{
    left: -100px;
    overflow: hidden;
    text-align: center;
    top: 7px;
    width: 200px;
}

.b-axis_pos_left .b-axis__tick
{
    border-top: 1px solid #000;
    right: 0;
    width: 5px;
}

.b-axis_pos_right .b-axis__tick
{
    border-top: 1px solid #000;
    left: 0;
    width: 5px;
}

.b-axis_pos_top .b-axis__tick
{
    border-left: 1px solid #000;
    bottom: 0;
    height: 5px;
}

.b-axis_pos_bottom .b-axis__tick
{
    border-left: 1px solid #000;
    top: 0;
    height: 5px;
}

